# oci-bundle-rs

./: Cargo.toml
src/: lib.rs  sha256_reader.rs
tests/: it.rs
