[package]
name = "oci-bundle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
flate2 = "1.0.34"
hex = "0.4.3"
log = "0.4.22"
ocidir = "0.3.1"
openssl = "0.10.68"
tar = "0.4.42"
thiserror = "1.0.65"
walkdir = "2.5.0"

[dev-dependencies]
simple_logger = { version = "5.0.0", default-features = false }
tempfile = "3.13.0"
test-temp-dir = "0.3.0"
